css/style.scss
body{
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.shortener-container{
    max-width: 100%;
    min-width: 10%;
    padding: 0 1em;
}

.slogan-container{
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    h2{
        position: relative;
        color: white;
        font-size: 33px;
        text-align: center;

        //box-shadow: 6px 6px 10px rgba(32, 32, 32, 0.408);
        padding: .1em .2em;
        border-radius: 5px;
        margin-bottom: 0em;
    }
}

.app-background{
    aspect-ratio: 900/600;
    width: 100%;

    background-repeat: repeat;
    background-position: center;
    background-size: cover;
    position: absolute;
    z-index: -3;
}

.bg-image{
    background-image: url('./img/stacked-waves-1.svg');
}


///////////////shortener input field, button and message/////////////////

.input-and-btn{
    margin-bottom: 1.3em;
    margin-top: 3em;
    width: 1000px;
    max-width: 100%;
    min-width: 10%;
    display: flex;

    input{
        width: 90%;
        height: 40px;
        font-size: 1em;
        //outline: none;
        border: 1px solid black;
        border-radius: 20px;
        padding-left: .3em;
    }
    button{
        margin-left: .5em;
        width: 25%;
        border-radius: 20px;
        background-color: rgba(54, 95, 191, 0.841);
        color: rgb(255, 255, 255);
        font-size: 1.3em;
        border: none;
        transition: 0.3s;
    }
    button:hover{
        cursor: pointer;
        background-color: rgba(80, 120, 211, 0.841);
    }
    button:active{
        scale: 0.97;
    }
}

.messages-container{
    display: flex;
    font-size: 1.2em;
    justify-content: center;
    color: rgb(255, 247, 251);
}

.message{
    margin-bottom: .3em;
}



///////////////////links history containers/////////////////////////

.all-links-container{
    word-wrap: break-all;
    width: 1000px;
    max-width: 100%;
    min-width: 10%;
    background-color: rgba(87, 128, 225, 0.841);
    border-radius: 14px;
    padding: 1.4em 0;
    margin-bottom: 3em;
    
}

.prev-link-and-result{
    margin: 0 1.4em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(239, 243, 247);
    padding: .5em;
    border-radius: 20px;
    margin-bottom: 1em;  
    transition: 0.3s;
}
.prev-link-and-result:hover{
    scale: 1.008    ;
    box-shadow: 6px 7px 11px rgba(0, 0, 0, 0.275);
}




///////////////tablet responsive design//////////////////

@media (min-width: 400px) and (max-width:900px){
    .app-background{
        aspect-ratio: 900/1000;
        transform: translateY(-200px);
    }
    h2{
        box-shadow: 0px 0px 11px rgba(0, 0, 0, 0) !important;
        margin-bottom: 0em;
    }
}


///////////////phone responsive design//////////////////

@media (max-width: 400px)  {
    .prev-link-and-result{
        margin: 0 0.7em;
        margin-bottom: 0.7em;
    }
    .result-link{
        font-size: 1.36em !important
    }
    .prev-link{
        font-size: .8em;
    }
    .input-and-btn{
        display: flex;
        flex-direction: column;
        margin-top: 1em;
        input{
            width: 96%;
            margin-bottom: 7px;
            font-size: 14px;
        }
        button{
            height: 100%;
            padding: .3em;
            width: 100%;
            margin-left: 0;
        }
    }
    .trashBin{
        margin-left: 5px;
        margin-right: 0px;
    }
    .messages-container{
        display: flex;
        font-size: .8em;
        justify-content: space-between;
        color: black;
    }
    .app-background{
        aspect-ratio: 900/1900;
        transform: translateY(-300px);

    }
    h2{
        font-size:22px !important;
        box-shadow: 0px 0px 11px rgba(0, 0, 0, 0) !important;
        margin-bottom: 0em;
    }
    
}


///////////////small phone responsive design//////////////////

@media (max-width: 290px)  {
    .prev-link-and-result{
        margin: 0 0.7em;
        margin-bottom: 0.7em;
    }
    .result-link{
        font-size: 1.1em !important
    }
    .prev-link{
        font-size: .6em;
    }

    .trashBin{
        width: 20px !important;
        margin-right: 0px;
    }
    .date{
        font-size: 9px !important;
    }
    .messages-container{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
}


////////////media queries to keep background on its place///////////

@media (min-width: 400px) and (max-width:647px){
    .app-background{
        transform: translateY(-150px);
    }
    .messages-container{
        color: black;
    }
}
@media (max-width:335px){
    .app-background{
        transform: translateY(-240px);
    }
}
@media (max-width:270px){
    .app-background{
        transform: translateY(-190px);
    }
}


///////////////////inside of a link history record containers////////////////////

.prev-link{
    cursor: pointer;
    margin-right: 2em;
    margin-bottom: .3em;
    opacity: 0.6;
}

.result-link{
    font-size: 1.8em;
    color: rgb(71, 57, 192);
    transition: 0.3s;
}
.result-link:hover{
    color: rgb(107, 94, 221);
    cursor: pointer;
}
.result-link:active{
    scale: 0.99;
}

.trashBin{
    width: 30px;
    transition: 0.2s;
    cursor: pointer;
    margin-left: 15px;
    margin-right: 8px;
}
.trashBin:hover{
    scale: 1.01;
}

.result-and-delete-icon{
    display: flex;
    flex-direction: column;
}

.date{
    position: relative;
    font-size: .8em;
    text-align: center;
    margin: 0;
    margin-left: .54em;
}



/////////////adding and deleting record animation///////////////

.container-animation{
    animation: containerAnimation 0.8s ease-in-out forwards;
}

@keyframes containerAnimation{
    0%{
        transform: translateX(-100px);
        opacity: 0;
    }
    100%{
        transform: translateX(0px);
        opacity: 1;
    }
}

.delete-animation{
    animation: deleteAnimation 0.6s ease-in-out forwards;
}

@keyframes deleteAnimation{
    0%{
        opacity: 1;
    }
    100%{
        transform: translateX(100px);
        opacity: 0;
    }
}

